dpkg (1.10.27) unstable; urgency=low
  The "Grab your gun and bring in the cat" Release.

  * New Translations (Christian Perrier):
    - Indonesian (Arief S Fitrianto).
    - Norwegian Bokmal (Bjorn Steensrud).
  * Updated Translations (Christian Perrier):
    - Dutch (confusing option corrected by Christian Perrier).
    - Galician (Jacobo Tarrio).
    - Korean (Seo Sanghyeon).
    - Simplified Chinese (Carlos Liu).
    - Traditional Chinese (Asho Yeh).

 -- Scott James Remnant <scott@netsplit.com>  Thu, 10 Feb 2005 15:10:22 +0000

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,48 @@
-2005-01-11  gettextize  <bug-gnu-gettext@gnu.org>
+2005-02-10  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* configure.in (AC_OUTPUT): Add po/Makefile.in.
 
+Thu Feb 10 15:20:27 GMT 2005 Scott James Remnant <scott@netsplit.com>
+
+  * version-nr, debian/changelog: Release 1.10.27.
+
+Thu Feb 10 15:08:44 GMT 2005 Scott James Remnant <scott@netsplit.com>
+
+  * configure.in (ALL_LINGUAS): Add forgetten 'id'.
+
+Wed Feb 09 06:30:20 CEST 2005 Christian Perrier <bubulle@debian.org>
+
+  * po/nl.po: Error corrected
+
+Sun Feb 06 19:55:54 CEST 2005 Carlos Liu <carlos_liu@yahoo.com>
+
+  * po/zh_CN.po: Fix errors
+
+Sat Feb 05 17:43:00 CEST 2005 Jacobo Tarrio <jtarrio@trasno.net>
+
+  * po/gl.po: Completed
+
+Sat Feb 05 17:33:00 CEST 2005 Asho Yeh <asho@ms44.url.com.tw>
+
+  * po/zh_TW.po: Updated
+
+Fri Jan 28 17:32:20 CEST 2005 Arief S Fitrianto <arief@gurame.fisika.ui.ac.id>
+
+  * po/id.po: First version
+
+Fri Jan 28 10:32:20 CEST 2005 Seo Sanghyeon <tinuviel@sparcs.kaist.ac.kr>
+
+  * po/ko.po: Completed
+
+Tue Jan 25 10:32:20 CEST 2005 Bjorn Steensrud <bjornst@powertech.no>
+
+  * po/nb.po: Added
+  * configure.in: Add nb to ALL_LINGUAS.
+
+Tue Jan 11 17:20:33 GMT 2005 Scott James Remnant <scott@netsplit.com>
+
+  * version-nr, debian/changelog: Bump version to 1.10.27~.
+	
 Tue Jan 11 16:33:07 GMT 2005 Scott James Remnant <scott@netsplit.com>
 
   * version-nr, debian/changelog: Release 1.10.26.
