--- a/po/ko.po
+++ b/po/ko.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.10.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-11 16:56+0000\n"
+"POT-Creation-Date: 2005-02-10 15:25+0000\n"
 "PO-Revision-Date: 2004-11-21 03:52+0900\n"
 "Last-Translator: Changwoo Ryu <cwryu@debian.org>\n"
 "Language-Team: Korean <cwryu@debian.org>\n"
@@ -4304,24 +4304,21 @@ msgid "Help: "
 msgstr "도움말: "
 
 #: dselect/basecmds.cc:177
-#, fuzzy
 msgid "Press ? for help menu, . for next topic, <space> to exit help."
 msgstr ""
-"도움말 메뉴는 ?, 다음 주제는 <스페이스>, 도움말을 나가려면 <enter>를 누르십시"
-"오."
+"도움말 메뉴는 ?, 다음 주제는 ., 도움말을 나가려면 <space>를 누르십시오."
 
 #: dselect/basecmds.cc:184
 msgid "Help information is available under the following topics:"
 msgstr "다음 주제에 대한 도움말 정보가 있습니다:"
 
 #: dselect/basecmds.cc:192
-#, fuzzy
 msgid ""
 "Press a key from the list above, <space> or `q' to exit help,\n"
 "  or `.' (full stop) to read each help page in turn. "
 msgstr ""
-"위의 목록에 따라 키를 누르십시오. 도움말을 나가려면 <enter>, `q', 혹은 `Q',\n"
-"  각 도움말 페이지를 순서대로 읽으려면 <스페이스> 키를 누르십시오."
+"위의 목록에 따라 키를 누르십시오. 도움말을 나가려면 <space>나 q를,\n"
+"  각 도움말 페이지를 순서대로 읽으려면 . 키를 누르십시오."
 
 #: dselect/basecmds.cc:198
 msgid "error reading keyboard in help"
@@ -5586,7 +5583,6 @@ msgid "Introduction to package selections"
 msgstr "꾸러미 선택에 관한 안내"
 
 #: dselect/helpmsgs.cc:33
-#, fuzzy
 msgid ""
 "Welcome to dselect's main package listing.\n"
 "\n"
@@ -5637,14 +5633,13 @@ msgstr ""
 "관해 마지막 검사를 하게 되고, 거기에서도 그 충돌이나 의존성에 관련된\n"
 "꾸러미 목록이 나타납니다.\n"
 "\n"
-"<enter>를 누르시면 도움말을 나가서 꾸러미 목록으로 들어갑니다.\n"
+"<space>를 누르시면 도움말을 나가서 꾸러미 목록으로 들어갑니다.\n"
 
 #: dselect/helpmsgs.cc:57
 msgid "Introduction to read-only package list browser"
 msgstr "꾸러미 목록 읽기 전용 브라우저 소개"
 
 #: dselect/helpmsgs.cc:57
-#, fuzzy
 msgid ""
 "Welcome to dselect's main package listing.\n"
 "\n"
@@ -5677,14 +5672,13 @@ msgstr ""
 "\n"
 "꾸러미 찾아보기를 마치고, 'Q'를 누르거나 <enter>를 누르면 끝납니다.\n"
 "\n"
-"도움말을 종료하고 목록으로 들아가려면 Space키를 누르십시오.\n"
+"도움말을 종료하고 목록으로 들아가려면 <space>를 누르십시오.\n"
 
 #: dselect/helpmsgs.cc:75
 msgid "Introduction to conflict/dependency resolution sub-list"
 msgstr "충돌/의존성 해결 하위 목록 소개"
 
 #: dselect/helpmsgs.cc:75
-#, fuzzy
 msgid ""
 "Dependency/conflict resolution - introduction.\n"
 "\n"
@@ -5744,7 +5738,7 @@ msgstr ""
 "됩니다.  추천한 사항이나 프로그램의 실수라고 생각되는 부분까지도 무시하려면\n"
 "`Q'를 사용하십시오.\n"
 "\n"
-"도움말에서 빠져나가서 하위 목록으로 들어가려면 <enter>키를 누르십시오.\n"
+"도움말에서 빠져나가서 하위 목록으로 들어가려면 <space>를 누르십시오.\n"
 "기억하세요.  도움이 필요하면 `?'키를 누르십시오.\n"
 
 #: dselect/helpmsgs.cc:100
