--- a/po/nl.po
+++ b/po/nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.9.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-11 16:56+0000\n"
+"POT-Creation-Date: 2005-02-10 15:25+0000\n"
 "PO-Revision-Date: 2005-01-06 23:41+0100\n"
 "Last-Translator: Bart Cornelis <cobaco@linux.be>\n"
 "Language-Team: Dutch <debian-l10n-dutch@debian.org>\n"
@@ -1520,7 +1520,7 @@ msgid ""
 "      Z     : background this process to examine the situation\n"
 msgstr ""
 "   Wat wilt u er aan doen ?  De volgende keuzes zijn mogelijk:\n"
-"    Y of N  : installeer de versie van de pakketbeheerder\n"
+"    Y of I  : installeer de versie van de pakketbeheerder\n"
 "    N of O  : behoudt de huidig geïnstalleerde versie\n"
 "      D     : toon de verschillen tussen de versies\n"
 "      Z     : stuur dit proces naar de achtergrond om de situatie te "
