--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # Kov Tchai <chaisave@263.com>, 2004.
 # Hiweed Leng <hiweed@163.com>, 2004.
-# 
-# 
+# Carlos Z.F. Liu <carlosliu@users.sourceforge.net>, 2004.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-11 16:56+0000\n"
-"PO-Revision-Date: 2004-10-29 03:52+1300\n"
+"POT-Creation-Date: 2005-02-10 15:25+0000\n"
+"PO-Revision-Date: 2005-02-07 05:27+1300\n"
 "Last-Translator: Tchaikov <chaisave@263.com>\n"
 "Language-Team: Chinese (simplified) <i18n-translation@lists.linux.net.cn>\n"
 "MIME-Version: 1.0\n"
@@ -4223,24 +4223,21 @@ msgid "Help: "
 msgstr "帮助："
 
 #: dselect/basecmds.cc:177
-#, fuzzy
 msgid "Press ? for help menu, . for next topic, <space> to exit help."
 msgstr ""
-"摁 ? 可以弹出帮助菜单，用 <空格> 能进入下个主题，通过 <回车> 就能退出帮助界"
-"面。"
+"摁 ? 可以弹出帮助菜单，用 . 来进入下个主题，通过 <空格> 就能退出帮助界面。"
 
 #: dselect/basecmds.cc:184
 msgid "Help information is available under the following topics:"
 msgstr "您可获得有关下列主题的帮助信息："
 
 #: dselect/basecmds.cc:192
-#, fuzzy
 msgid ""
 "Press a key from the list above, <space> or `q' to exit help,\n"
 "  or `.' (full stop) to read each help page in turn. "
 msgstr ""
-"请摁上面列表中所示的按键，用 <回车>、“q”或者“Q”来退出帮助界面，\n"
-"或者用 <空格> 来依次阅读帮助页面。"
+"请摁上面列表中所示的按键，用 <空格> 或者“q”来退出帮助界面，\n"
+"或者用“.”(英文句点)来依次阅读帮助页面。"
 
 #: dselect/basecmds.cc:198
 msgid "error reading keyboard in help"
@@ -5496,7 +5493,6 @@ msgid "Introduction to package selections"
 msgstr "软件包自选界面简介"
 
 #: dselect/helpmsgs.cc:33
-#, fuzzy
 msgid ""
 "Welcome to dselect's main package listing.\n"
 "\n"
@@ -5529,7 +5525,7 @@ msgstr ""
 "欢迎来到 dselect 的软件包主列表界面。\n"
 "\n"
 "展现在您面前的是已经安装的或可以安装的软件包列表。\n"
-"您若要想安装的话，可以使用方向键徜徉于这个列表中，\n"
+"您若要想安装的话，可以使用方向键在这个列表中浏览，\n"
 "为要安装的软件包作上记号(用“+”)，也可以为希望卸载\n"
 "的软件包作记号(用“-”)。\n"
 "作记号时，不仅可以对单个软件包作记号，还可以为成组\n"
@@ -5538,22 +5534,25 @@ msgstr ""
 "所指的所有软件包。\n"
 "\n"
 "您作的一些选择可能会导致软件包间的冲突或依赖问题，\n"
-"这时软件会把一份该问题的相关软件列表交给你，这样，\n"
-"您就能解决这个问题了。\n"
+"这时程序会向您提交一份相关软件的子列表，这样，您就\n"
+"能解决该问题。\n"
+"\n"
+"您应当看看按键的列表，以及有关屏幕上显示信息的解释。\n"
+"还有许多在线的帮助文档，只要在需要帮助的时候摁“?”\n"
+"就可调阅它们。\n"
 "\n"
 "一旦您选完软件包，请摁 <回车> 键来确认刚才的修改，\n"
-"或者用“Q”退出同时不保存。在这时，会最后作一次冲突\n"
-"和依赖性的检查 - 对，您在这里可能还会看一次相关软件\n"
-"列表。\n"
+"或者用“X”退出且不保存修改内容。在这时，程序会最后\n"
+"作一次冲突和依赖性检查 - 对，您在这里可能还会看一\n"
+"次相关软件的子列表。\n"
 "\n"
-"现在您可以通过摁 <回车> 键离开帮助界面，进入列表界面了。\n"
+"现在您可以通过摁 <空格> 键离开帮助并进入列表界面。\n"
 
 #: dselect/helpmsgs.cc:57
 msgid "Introduction to read-only package list browser"
 msgstr "只读软件包列表浏览界面简介"
 
 #: dselect/helpmsgs.cc:57
-#, fuzzy
 msgid ""
 "Welcome to dselect's main package listing.\n"
 "\n"
@@ -5576,23 +5575,24 @@ msgstr ""
 "欢迎来到 dselect 的软件包主列表界面。\n"
 "\n"
 "展现在您面前的是已经安装的或可以安装的软件包列表。\n"
-"由于您没有权限修改软件包的状态，就只能以只读模式操作了。\n"
-"您可以使用方向键在本列表中(请参考帮助界面中的“按键操作”一节)\n"
-"移动，还可以查看软件包的状态并获知软件包的相关信息。\n"
+"由于您没有权限修改软件包的状态，就只能以只读模式操\n"
+"作了。您可以使用方向键在本列表中移动(请参考帮助界\n"
+"面中的“按键操作”一节)，并查看软件包的状态以及获得\n"
+"软件包的相关信息。\n"
 "\n"
 "您应当看看按键的列表，以及有关屏幕上显示信息的解释。\n"
-"您可以访问许多在线的帮助文档，无论何时只要摁“?”就可\n"
-"调阅它们。\n"
-"一旦您看完，请摁“Q”或者 <回车> 键来退出软件。\n"
+"还有许多在线的帮助文档，只要在需要帮助的时候摁“?”\n"
+"就可调阅它们。\n"
 "\n"
-"现在您可以通过摁 <回车> 键离开帮助界面，进入列表界面了。\n"
+"您看完后，请摁“Q”或者 <回车> 键来退出软件。\n"
+"\n"
+"现在您可以通过摁 <空格> 键离开帮助系统并进入列表界面了。\n"
 
 #: dselect/helpmsgs.cc:75
 msgid "Introduction to conflict/dependency resolution sub-list"
 msgstr "用于解决冲突/依赖问题的子列表的简介"
 
 #: dselect/helpmsgs.cc:75
-#, fuzzy
 msgid ""
 "Dependency/conflict resolution - introduction.\n"
 "\n"
@@ -5626,23 +5626,23 @@ msgid ""
 "Press <space> to leave help and enter the sub-list; remember: press `?' for "
 "help.\n"
 msgstr ""
-"用于解决冲突/依赖问题的子列表的简介。\n"
+"依赖/冲突问题的解决办法 - 简介。\n"
 "\n"
-"您作的选择中有些引起了冲突或依赖问题，即，\n"
+"您所作的选择中有些引起了冲突或依赖问题，即，\n"
 "有些软件包必须与某些其它软件包一同安装，\n"
 "而有的软件包的特定组合是不能同时安装的。\n"
 "\n"
-"您将会见到一个子列表，它囊括了波及到的\n"
-"软件包。显示内容的下半部分会告诉您相关\n"
+"您将会见到一个子列表，它包含了被波及到的\n"
+"软件包。屏幕显示的下半部分会告诉您相关\n"
 "的冲突和依赖关系。请使用“i”来浏览软件包\n"
 "的简介和内部控制信息。\n"
 "\n"
-"有一组被“建议”的软件包已被统计出来了，\n"
-"而且这个子列表中的对应软件包的状态也被\n"
-"标记成了“建议”的状态。这样，如果您愿意\n"
-"的话，只需摁一下回车来接受软件的建议。\n"
-"您还可以摁大写的“X”来取消这个导致问题\n"
-"的更改，并回到主列表界面。\n"
+"这里已经分析并“建议”了一组软件包，并且\n"
+"本子列表中的软件包的初始状态都已经被标记为\n"
+"对应的“建议”状态。这样，如果您愿意的话，\n"
+"只需摁一下回车来接受该建议。您也可以摁大写\n"
+"的“X”来取消这个导致问题的更改，并回到主\n"
+"列表界面。\n"
 "\n"
 "您也可以按照自己的需求修改列表中软件包\n"
 "的状态。同时，您也可以摁大写的“D”或“R”\n"
@@ -5651,7 +5651,7 @@ msgstr ""
 "本软件出错时，您还可以摁大写的“Q”来强制\n"
 "我接受当前显示的设定。\n"
 "\n"
-"请摁<回车>离开帮助界面，进入子列表。\n"
+"请摁 <空格> 离开帮助系统并进入子列表。\n"
 "请记住：需要帮助时，摁“?”键。\n"
 
 #: dselect/helpmsgs.cc:100
