--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+dpkg (1.10.27) unstable; urgency=low
+
+  The "Grab your gun and bring in the cat" Release.
+
+  * New Translations (Christian Perrier):
+    - Indonesian (Arief S Fitrianto).
+    - Norwegian Bokmal (Bjorn Steensrud).
+  * Updated Translations (Christian Perrier):
+    - Dutch (confusing option corrected by Christian Perrier).
+    - Galician (Jacobo Tarrio).
+    - Korean (Seo Sanghyeon).
+    - Simplified Chinese (Carlos Liu).
+    - Traditional Chinese (Asho Yeh).
+
+ -- Scott James Remnant <scott@netsplit.com>  Thu, 10 Feb 2005 15:10:22 +0000
+
 dpkg (1.10.26) unstable; urgency=low
 
   The "Captain Tight-Pants" Release.
