dpkg (1.13.3) experimental; urgency=low
  The "Paying off Karma at a vastly acclerated rate" Release.

  * Missing newline added to warning output function.  Closes: #283798.
  * Fixed prototype warning in dpkg-scansources.  Closes: #213577, #219760,
    #267505.
  * Removed trailing line from debian origins file.  Closes: #264904.
  * Changed dpkg-buildpackage to say "source changed by" rather than
    "source maintainer is".  Closes: #247313.
  * Fixed dpkg-gencontrol to allow '-' in architecture names.  Closes: #274677.
  * Fixed "unknown information field" error to report field that it doesn't
    know about.  Closes: #275243.

  * Documentation:
    - Remove "medium-level" from description of dpkg.  Closes: #292454.
    - Harmonised argument names in update-alternatives(8).
      Closes: #267095, #284941
    - Documented what the '+' and '*' mean in update-alternatives --config
      output.  Closes: #270486.
    - Mention aptitude alongside dselect in 'dpkg --usage' and
      'dpkg-deb --help', fix quote style of mention in 'dpkg --help'.
      Closes: #274800, #278118.
    - Associate --truename with the description of what it does in
      dpkg-divert(8).  Closes: #277076.
    - Removed last remaining references to the packaging manual, replacing
      with better references.  Closes: #262775.
    - Documented format of file dpkg --set-selections takes.  Closes: #270043.

 -- Scott James Remnant <scott@netsplit.com>  Mon, 21 Mar 2005 03:10:27 +0000

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,77 @@
+2005-03-21  Scott James Remnant  <scott@netsplit.com>
+
+	* scripts/controllib.pl (unknown): Output field name we have in
+	hand, rather than trying to look it up in a dictionary in which
+	it doesn't exist yet.
+
+	* scripts/changelog/debian.pl: Revert accidental half-patch that
+	turned the Maintainer field into a Changed-By field.
+
+2005-03-21  Marc Dequènes  <duck@duckcorp.org>
+
+	* scripts/dpkg-gencontrol.pl: Fix filename regexp to allow '-'
+	in architecture names.
+
+2005-03-20  Scott James Remnant  <scott@netsplit.com>
+
+	* scripts/dpkg-buildpackage.sh: Output "source changed by"
+	rather than "source maintainer is".
+
+	* man/C/dpkg.1: Document that --get-selections takes a package
+	name pattern.  Document format of file --set-selections takes.
+
+	* man/C/dpkg-source.1: Remove unnecessary references to policy
+	and non-existant packaging manual.  Refer to dpkg-shlibdeps(1)
+	for shlibs file format.  Will need to document changelog format
+	at some point.
+	* man/C/dselect.1: Remove unnecessary reference to policy, refer
+	other reference to the package by name.
+	* man/C/deb-old.5: Remove reference to non-existant packaging
+	manual.
+	* man/C/deb.5: Remove reference to non-existant packaging
+	manual, will have to document control contents better here later.
+
+	* man/C/dpkg.1: Fix typo (fileis -> file is).
+
+	* origins/debian: Remove trailing line.
+
+2005-03-20  Mathias Weidner  <mathias@weidner.in-bad-schmiedeberg.de>
+
+	* scripts/dpkg-scansources.pl (getopt): Add (@) to prototype.
+
+2005-03-20  Scott James Remnant  <scott@netsplit.com>
+
+	* man/C/update-alternatives.8: Document what the '+' and '*'
+	marked choices in --config output mean.
+
+	* src/main.c (usage): Make aptitude quoting consistent.
+
+	* man/C/dpkg-divert.8: Mention --truename alongside the comment
+	about what it does.
+
+	* src/main.c (printforhelp): Mention aptitude alongside dselect.
+	* dpkg-deb/main.c (usage): Mention aptitude alongside dselect.
+
+	* lib/ehandle.c (warningf): Add missing newline to end of format
+	string.
+
+	* man/C/update-alternatives.8: Harmonise names for arguments to
+	--install option.
+
+	* man/C/dpkg.1: Remove "medium-level" from dpkg's description,
+	it's somewhere between medium and low.  The fact it's a package
+	manager is sufficient description.
+
+	* src/query.c (listpackages): Create a second filtered list of
+	packages, sort that (rather than the complete list) and use that
+	when calling list1package.  This means we only expand to the
+	longest field in the result, not the database.  Hopefully the
+	speed gain of only sorting a filtered list outweights the slighty
+	extra computation time.
+
 2005-03-18  Scott James Remnant  <scott@netsplit.com>
+
+	* configure.ac: Bump version to 1.13.3~.
 
 	* configure.ac: Release 1.13.2.
 
