--- a/man/C/deb-old.5
+++ b/man/C/deb-old.5
@@ -26,9 +26,7 @@ the length of the first gzipped tarfile.
 Each of these lines is terminated with a single newline character.
 .PP
 The first tarfile contains the control information, as a series of
-ordinary files, described in
-.IR "Debian Packaging Manual, section 2.2".
-The file
+ordinary files.  The file
 .B control
 must be present, as it contains the core control information.
 .PP
@@ -49,5 +47,4 @@ on.  The pathnames do not have leading slashes.
 .SH SEE ALSO
 .BR deb (5),
 .BR dpkg-deb (1),
-.BR deb-control (5),
-.IR "Debian Packaging Manual".
+.BR deb-control (5).
