--- a/man/C/deb.5
+++ b/man/C/deb.5
@@ -39,10 +39,8 @@ The second required member is named
 It is a gzipped tar archive containing the package control information,
 as a series of plain files, of which the file
 .B control
-is mandatory and contains the core control information.  Please see the
-.I "Debian Packaging Manual, section 2.2"
-for details of these files.  The control tarball may optionally contain
-an entry for
+is mandatory and contains the core control information.  The control
+tarball may optionally contain an entry for
 .RB ` . ',
 the current directory.
 .PP
@@ -69,5 +67,4 @@ with names starting with something other than underscores, or will
 .SH SEE ALSO
 .BR deb-old (5),
 .BR dpkg-deb (1),
-.BR deb-control (5),
-.IR "Debian Packaging Manual".
+.BR deb-control (5).
