--- a/man/C/dselect.1
+++ b/man/C/dselect.1
@@ -216,7 +216,9 @@ in doing so and can not be assumed to be a sufficient substitute for
 administrator skill and understanding.  The user is required to
 be familiar with the concepts underlying the Debian packaging system.
 In case of doubt, consult the \fBdpkg(8)\fP manpage and the Debian
-policy manual.
+Policy manual, contained in the
+.B debian-policy
+package.
 .sp
 Unless \fBdselect\fP is run in expert
 or immediate mode, a help screen is first displayed when choosing this
@@ -428,8 +430,7 @@ broken, it is also much more flexible than the built in access methods.
 .BR dpkg (8),
 .BR apt-get (8),
 .BR sources.list (5),
-.BR deb (5),
-the Debian policy manual.
+.BR deb (5).
 .SH AUTHORS
 .B dselect
 was written by Ian Jackson (ijackson@gnu.ai.mit.edu). Full list of
