--- a/man/C/dpkg-divert.8
+++ b/man/C/dpkg-divert.8
@@ -32,8 +32,8 @@ contains those files.
 is the utility used to set up and update the list of diversions. It
 functions in three basic modes - adding, removing, and listing diversions.
 The options are \-\-add, \-\-remove, and \-\-list, respectively. Additionally,
-it can print out the real name for a diverted file. Other options
-(listed below) may also be specified.
+it can print out the real name for a diverted file with \-\-truename.
+Other options (listed below) may also be specified.
 .SH OPTIONS
 .TP
 .I \-\-admindir <directory>
