--- a/man/C/dpkg-source.1
+++ b/man/C/dpkg-source.1
@@ -60,8 +60,8 @@ control area file of the package containing the file which
 .B objdump
 reports as satisfying the library dependency, or
 .BR /etc/dpkg/shlibs.default .
-The first match will be used.  See the
-.I Debian packaging manual
+The first match will be used.  See
+.BR dpkg-shlibdeps 1
 for details of the format of shared library dependency files.
 
 .B dpkg\-genchanges
@@ -228,11 +228,8 @@ This option is understood by
 .TP
 .BI \-F changelogformat
 Specifies the format of the changelog.  By default the format is read
-from a special line near the bottom of the changelog (see the
-Debian packaging manual) or failing that defaults to
-.BR debian ,
-the standard format described in the
-.IR "Debian packaging manual" .
+from a special line near the bottom of the changelog or failing that
+defaults to the debian standard format.
 This option is understood by
 .BR dpkg\-source ", " dpkg\-gencontrol " and " dpkg\-genchanges .
 .TP
@@ -801,10 +798,6 @@ It should be possible to specify spaces and shell metacharacters in
 and initial arguments for
 .IR gain-root-command " and " sign-command .
 .SH SEE ALSO
-.IR "Debian packaging manual" ,
-.br
-.IR "Debian policy manual" ,
-.br
 .BR dpkg\-deb (1),
 .BR dpkg (8),
 .BR dselect (8),
