--- a/man/C/update-alternatives.8
+++ b/man/C/update-alternatives.8
@@ -1,4 +1,4 @@
-.\" update\-alternatives.8
+C.\" update\-alternatives.8
 .\" This man page is copyright 1997 Charles Briscoe-Smith
 .\" This is free documentation; you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License as published
@@ -12,10 +12,10 @@ update\-alternatives - maintain symbolic links determining default commands
 .B update\-alternatives
 .RI [ options ]
 .B \-\-install
-.I link name path priority
+.I genname symlink altern priority
 .RB [ \-\-slave
-.I link name
-.IR path ]...
+.I genname symlink
+.IR altern ]...
 .PP
 .B update\-alternatives
 .RI [ options ]
@@ -162,7 +162,8 @@ option,
 will list all of the choices for the link group
 of which given
 .I name
-is the master link.
+is the master link.  The current choice is marked with a '*' and the
+choice with the highest priority with a '+'.
 You will then be prompted for which of the choices to use
 for the link group. Once you make a change, the link group will no
 longer be in
@@ -307,20 +308,16 @@ different from the default.
 .\" The names of the arguments should be identical with the ones
 .\" in SYNOPSIS section.
 .TP
-\fB\-\-install\fR \fIgen link alt pri\fR [\fB\-\-slave\fR \fIsgen slink salt\fR] ...
+\fB\-\-install\fR \fIgenname symlink altern priority\fR [\fB\-\-slave\fR \fIgenname symlink altern\fR] ...
 Add a group of alternatives to the system.
-.I gen
+.I genname
 is the generic name for the master link,
-.I link
+.I symlink
 is the name of its symlink in the alternatives directory, and
-.I alt
+.I altern
 is the alternative being introduced for the master link.
-.IR sgen ,
-.I slink
-and
-.I salt
-are the generic name, symlink name in the alternatives directory and alternative
-for a slave link.
+The arguments after \fB\-\-slave\fR are the generic name, symlink name in the
+alternatives directory and alternative for a slave link.
 Zero or more
 .B \-\-slave
 options, each followed by three arguments,
