dpkg (1.13.4) experimental; urgency=low
  The "Or the Wabbit gets it" Release

  * Add -L option to dpkg-architecture to list architecture strings
    we can accept.

 -- Scott James Remnant <scott@netsplit.com>  Tue, 29 Mar 2005 13:31:15 +0100

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,28 @@
+2005-03-29  Scott James Remnant  <scott@netsplit.com>
+
+	* configure.ac: Release 1.13.4.
+
+2005-03-28  Scott James Remnant  <scott@netsplit.com>
+
+	* scripts/dpkg-architecture.pl: Catch -L and list every possible
+	os and cpu combination.
+	(usageversion): Add -L option to description.
+	(read_cputable): Add in-order list of cpu values to @cpu array.
+	(read_ostable): Add in-order list of os values to @os array.
+	* man/C/dpkg-architecture.1: Document -L option.
+
+2005-03-27  Scott James Remnant  <scott@netsplit.com>
+
+	* m4/arch.m4 (DPKG_OS_TYPE): Allow a vendor to appear at the start
+	of $os_type.
+	* scripts/dpkg-architecture.pl (gnu_to_debian): Don't strip the
+	vendor out, just allow it to appear at the start of the string.
+
 2005-03-21  Scott James Remnant  <scott@netsplit.com>
+
+	* configure.ac: Bump version to 1.13.4~.
+
+	* configure.ac: Release 1.13.3.
 
 	* scripts/controllib.pl (unknown): Output field name we have in
 	hand, rather than trying to look it up in a dictionary in which
