--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,15 @@
+dpkg (1.13.4) experimental; urgency=low
+  
+  The "Or the Wabbit gets it" Release
+
+  * Add -L option to dpkg-architecture to list architecture strings
+    we can accept.
+
+ -- Scott James Remnant <scott@netsplit.com>  Tue, 29 Mar 2005 13:31:15 +0100
+
 dpkg (1.13.3) experimental; urgency=low
   
-  The "Paying off Karma at a vastly acclerated rate" Release.
+  The "Paying off Karma at a vastly accelerated rate" Release.
 
   * Missing newline added to warning output function.  Closes: #283798.
   * Fixed prototype warning in dpkg-scansources.  Closes: #213577, #219760,
