--- a/man/C/dpkg-architecture.1
+++ b/man/C/dpkg-architecture.1
@@ -11,7 +11,8 @@ Valid options:
 \&\fB\-f\fR
 .PP
 Valid actions:
-\&\fB\-l\fR, \fB\-q\fRVariable\-Name, \fB\-s\fR, \fB\-u\fR, \fB\-c\fR Command
+\&\fB\-l\fR, \fB\-q\fRVariable\-Name, \fB\-s\fR, \fB\-u\fR, \fB\-c\fR Command,
+\fB\-L\fR
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
 dpkg-architecture does provide a facility to determine and set the build and
@@ -35,6 +36,8 @@ command. This can be used to set the environment variables using eval. \fB\-u\fR
 does return a similar command to unset all variables. \fB\-c\fR does execute a
 command in an environment which has all variables set to the determined
 value.
+.PP
+A list of valid architecture names can be printed with the \fB\-L\fR action.
 .PP
 Existing environment variables with the same name as used by the scripts are
 not overwritten, except if the \fB\-f\fR force flag is present. This allows the user
