dpkg (1.10.28) unstable; urgency=low
  The "Awh, yeah?  Ripper!" Release.

  * New Translations (Christian Perrier):
    - Romanian (Eddy Petrisor).  Closes: #309714.
    - Tagalog (Eric Pareja).  Closes: #296407.
  * Updated Translations (Christian Perrier):
    - French (Christian Perrier).
    - Greek (Konstantinos Margaritis).  Closes: #295922
    - Indonesian (Arief S Fitrianto).  Closes: #296733
  * Updated Manpage Translations (Christian Perrier):
    - French (Philippe Batailler).
    - Syntax error corrected in Brazilian Portuguese man page for
      update-alternatives.  Closes: #300646

 -- Scott James Remnant <scott@netsplit.com>  Thu, 26 May 2005 18:18:10 +0100

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,48 @@
-2005-02-10  gettextize  <bug-gnu-gettext@gnu.org>
+Thu May 26 18:18:10 BST 2005 Scott James Remnant <scott@netsplit.com>
 
-	* configure.in (AC_OUTPUT): Add po/Makefile.in.
+  * version-nr, debian/changelog: Release 1.10.28.
+	
+Thu May 25 14:05:20 CEST 2005 Eddy Petrisor <eddy.petrisor@gmail.com>
+
+  * po/ro.po: Complete translation..:-)
+
+Thu May 22 09:43:20 CEST 2005 Eddy Petrisor <eddy.petrisor@gmail.com>
+
+  * po/ro.po: Better translation
+
+Thu May 19 07:38:20 CEST 2005 Eddy Petrisor <eddy.petrisor@gmail.com>
+
+  * po/ro.po: Added though incomplete
+  * configure.in: Added Romanian to the languages list.
+
+Sun Apr 24 07:38:20 CEST 2005 Philippe Batailler <philippe.batailler@free.fr>
+
+  * man/fr/: all man pages updated
+
+Wed Mar 30 14:30:20 CEST 2005 Christian Perrier <bubulle@debian.org>
+
+  * man/pt_BR/update-alternatives.8: Syntax error corrected
+
+Wed Mar 30 13:30:20 CEST 2005 eric pareja <xenos@upm.edu.ph>
+
+  * po/tl.po: Added Tagalog translation
+  * configure.in: Added Tagalog to the languages list
+
+Tue Mar 08 06:30:20 CEST 2005 Christian Perrier <bubulle@debian.org>
+
+  * po/fr.po: Missing space added in one string
+
+Mon Mar 07 17:32:20 CEST 2005 Arief S Fitrianto <arief@gurame.fisika.ui.ac.id>
+
+  * po/id.po: Completed
+
+Sat Feb 19 07:53:20 CEST 2005 Konstantinos Margaritis <markos@debian.org>
+
+  * po/el.po: Completed
+
+Thu Feb 10 15:40:04 GMT 2005 Scott James Remnant <scott@netsplit.com>
+
+  * version-nr, debian/changelog: Bump version to 1.10.28~.
 
 Thu Feb 10 15:20:27 GMT 2005 Scott James Remnant <scott@netsplit.com>
 
