--- a/man/fr/deb-control.5
+++ b/man/fr/deb-control.5
@@ -217,4 +217,6 @@ Description: GNU grep, egrep and fgrep.
 .BR dpkg (8),
 .BR dpkg-deb (1).
 .SH TRADUCTION
-Philippe Batailler, Octobre 2003.
+Philippe Batailler, 2005.
+Veuillez signaler toute erreur à <debian-l10n-french@lists.debian.org>.
+
