--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,8 @@
-2005-02-10  gettextize  <bug-gnu-gettext@gnu.org>
+2005-05-26  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.14.2.
+
+2005-05-26  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* Makefile.in.in: New file, from gettext-0.14.1.
 	* Rules-quot: New file, from gettext-0.14.1.
