--- a/man/C/dpkg.1
+++ b/man/C/dpkg.1
@@ -480,10 +480,12 @@ Configuration file conflicts are reported as
 \fB\-\-log=\fP\fIfilename\fP
 Log status change updates and actions to \fIfilename\fP.  This can be given
 multiple times.  Log messages are of the form `YYYY-MM-DD HH:MM:SS status
-<state> <pkg> <installed-version>' for status change updates and
+<state> <pkg> <installed-version>' for status change updates;
 `YYYY-MM-DD HH:MM:SS <action> <pkg> <installed-version>
 <available-version>' for actions where \fI<action>\fP is one of install,
-upgrade, remove, purge.
+upgrade, remove, purge; and `YYYY-MM-DD HH:MM:SS conffile <filename>
+<decision>' for conffile changes where \fI<decision\fP is either install
+or keep.
 .SH FILES
 .TP
 .I /etc/dpkg/dpkg.cfg
