--- a/man/fr/dpkg-query.1
+++ b/man/fr/dpkg-query.1
@@ -64,7 +64,7 @@ Affiche des renseignements sur la version.
 Change l'endroit où se trouve la base de données de \fBdpkg\fR. Par défaut, 
 c'est \fI/var/lib/dpkg\fR.
 .TP
-.B \-\-showformat=\fR\fIformat
+\fB-f\fP | \fB\-\-showformat=\fP\fIformat\fR
 On se sert de cette option pour préciser le format de la sortie que produit 
 la commande \fB\-\-show\fR. Ce format est une chaîne, produite pour chaque 
 paquet, qui peut contenir les séquences d'échappement classiques comme \en 
@@ -95,6 +95,6 @@ version 2 ou supérieure pour les droits de copie. Il n'y a PAS de garantie.
 \fBdpkg\fR(8)
 
 .SH TRADUCTION
-Philippe Batailler, 2004.
+Philippe Batailler, 2005.
 Veuillez signaler toute erreur à <debian-l10-french@lists.debian.org>.
-dpkg, version 1.10.23.
+
