--- a/man/sv/dpkg-deb.1
+++ b/man/sv/dpkg-deb.1
@@ -105,7 +105,7 @@ filnamn som skall användas).
 Tillhandahåller information om ett binärt parketarkiv.
 
 Om inga
-.I control-filnamn
+.R control-filnamn
 anges kommer det att visa en sammanfattning av innehållet i paketet
 tillsammans med dess styrfil.
 
