--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,47 @@
+2005-05-25  Eddy Petrisor  <eddy.petrisor@gmail.com>
+
+	* ro.po: Nearly complete translation..:-)
+
+2005-05-22  Eddy Petrisor  <eddy.petrisor@gmail.com>
+
+	* ro.po: Better translation
+
+2005-05-19  Eddy Petrisor  <eddy.petrisor@gmail.com>
+
+	* ro.po: Add translation
+	* LINGUAS: Add Romanian to the language list
+
+2005-03-30  Eric Pareja  <xenos@upm.edu.ph>
+
+	* tl.po: Add translation
+	* LINGUAS: Add Tagalog to the language list
+
+2005-03-30  Christian Perrier  <bubulle@debian.org>
+
+	* dpkg.pot: Regenerated
+	* *.po: Updated
+	* fr.po: Complete translation
+
+2005-03-18  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: Completed
+
+2005-03-18  Christian Perrier  <bubulle@debian.org>
+
+	* dpkg.pot: Regenerated
+	* *.po: Updated
+
+2005-03-18  Arief S Fitrianto  <arief@gurame.fisika.ui.ac.id>
+
+	* id.po: Completed from 1.10 branch (2nd try)
+
 2005-03-18  Scott James Remnant  <scott@netsplit.com>
 
 	* POTFILES.in: Removed utils/md5sum.c now it no longer exists.
+
+2005-03-08  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: Missing space added
 
 2005-03-03  Arief S Fitrianto  <arief@gurame.fisika.ui.ac.id>
 
