--- a/man/fr/dpkg-split.1
+++ b/man/fr/dpkg-split.1
@@ -125,11 +125,11 @@ Indique un répertoire différent pour la file comprenant les parties en
 attente d'une recomposition automatique. Par défaut, c'est le répertoire 
 \fB/var/lib/dpkg\fR.
 .TP
-.BI \-\-partsize|-S " kbytes"
+.BI \-\-partsize\fR|\fB\-S " kbytes"
 Indique, en kilooctets (1024 octets), la taille maximum d'une partie lors 
 d'une décomposition. Par défaut, la taille maximum est de 450 ko.
 .TP
-.BI \-\-output|\-O " fichier\-complet"
+.BI \-\-output\fR|\fB\-O " fichier\-complet"
 Indique le nom du fichier à produire pour une recomposition.
 
 Cela annule le fichier par défaut lors d'une recomposition «\ à la main\ » 
@@ -198,6 +198,5 @@ Copyright (C) 1995-1996 Ils ont été édités sous la «\ GNU General Public
 Licence\ »\ ; il n'y a PAS de GARANTIE. Voyez \fB/usr/share/dpkg/copyright\fR 
 et \fB/usr/share/common\-licenses/GPL\fR pour des précisions.
 .SH TRADUCTION
-Philippe Batailler, 2004.
+Philippe Batailler, 2005.
 Veuillez signaler toute erreur à <debian-l10-french@lists.debian.org>.
-dpkg, version 1.10.23.
