dpkg (1.13.6) experimental; urgency=low
  The "Just kidding about the God part" Release.

  * Fixed incorrect installation location of /etc/logrotate.d/dpkg caused
    by a mis-understanding of dh_install's abilities.

 -- Scott James Remnant <scott@netsplit.com>  Mon,  6 Jun 2005 05:58:36 +0100

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-06-06  Scott James Remnant  <scott@netsplit.com>
 
+	* debian/dpkg.install: Don't use dh_install to copy the logrotate
+	file because it can't rename things.
+	* debian/rules (binary-arch): Install and rename manually instead.
+	* configure.ac: Release 1.13.6 (Brown Paper Bag).
+
+	* configure.ac: Bump version to 1.13.6~.
+
 	* configure.ac: Release 1.13.5.
 
 2005-06-06  Philippe Batailler  <philippe.batailler@free.fr>
