--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+dpkg (1.13.6) experimental; urgency=low
+  
+  The "Just kidding about the God part" Release.
+
+  * Fixed incorrect installation location of /etc/logrotate.d/dpkg caused
+    by a mis-understanding of dh_install's abilities.
+
+ -- Scott James Remnant <scott@netsplit.com>  Mon,  6 Jun 2005 05:58:36 +0100
+
 dpkg (1.13.5) experimental; urgency=low
   
   The "Flatulent Elm of West Ruislip" Release.
