dpkg (1.13.7) experimental; urgency=low
  The "Maidenhead Creeping Water Plant" Release.

  * Reduced inability to open a log file to a warning, suppressed for
    non-root operations.  Closes: #312383.

 -- Scott James Remnant <scott@netsplit.com>  Thu,  9 Jun 2005 06:12:56 +0100

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,25 @@
+2005-06-09  Scott James Remnant  <scott@netsplit.com>
+
+	* configure.ac: Release 1.13.7.
+
+	* src/main.c (setfile): Make inability to open the log file a
+	warning only, rather than bailing out; and if not running as root,
+	don't even show the warning.
+
+2005-06-09  Colin Watson  <cjwatson@ubuntu.com>
+
+	* man/C/dpkg-architecture.1: Include example debian/rules snippet
+	to support older versions of dpkg-dev after updating to use new
+	variables.
+
+2005-06-09  Scott James Remnant  <scott@netsplit.com>
+
+	* man/C/dpkg-architecture.1: Clean up examples using .nf and .fi
+	to produce a pre-like effect.  Indent the examples a little.
+
 2005-06-06  Scott James Remnant  <scott@netsplit.com>
+
+	* configure.ac: Bump version to 1.13.7~.
 
 	* debian/dpkg.install: Don't use dh_install to copy the logrotate
 	file because it can't rename things.
