--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+dpkg (1.13.7) experimental; urgency=low
+  
+  The "Maidenhead Creeping Water Plant" Release.
+
+  * Reduced inability to open a log file to a warning, suppressed for
+    non-root operations.  Closes: #312383.
+
+ -- Scott James Remnant <scott@netsplit.com>  Thu,  9 Jun 2005 06:12:56 +0100
+
 dpkg (1.13.6) experimental; urgency=low
   
   The "Just kidding about the God part" Release.
