dpkg (1.13.8) experimental; urgency=low
  The "In like Flynn" Release.

  * Linux 2.6.12 changed the behaviour of mmap to fail and set EINVAL when
    given a zero length, rather than returning NULL.  This is POSIXly
    correct, so handle zero-length package control files (like available).

 -- Scott James Remnant <scott@netsplit.com>  Fri, 10 Jun 2005 07:39:44 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+dpkg (1.13.8) experimental; urgency=low
+  
+  The "In like Flynn" Release.
+
+  * Linux 2.6.12 changed the behaviour of mmap to fail and set EINVAL when
+    given a zero length, rather than returning NULL.  This is POSIXly
+    correct, so handle zero-length package control files (like available).
+
+ -- Scott James Remnant <scott@netsplit.com>  Fri, 10 Jun 2005 07:39:44 +0100
+
 dpkg (1.13.7) experimental; urgency=low
   
   The "Maidenhead Creeping Water Plant" Release.
