--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,14 @@
+2005-06-10  Scott James Remnant  <scott@netsplit.com>
+
+	* configure.ac: Release 1.13.8.
+
+	* lib/parse.c (parsedb): Check whether the file size is greater
+	than zero bytes in size before trying to mmap or malloc it, if it
+	isn't don't process the file.
+
 2005-06-09  Scott James Remnant  <scott@netsplit.com>
+
+	* configure.ac: Bump version to 1.13.8~.
 
 	* configure.ac: Release 1.13.7.
 
